# research-token

./: .env  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
.next/: trace
.next/cache/: .tsbuildinfo  config.json  next-server.js.nft.json
.next/server/: _error.js  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/pages/: _app.js  _document.js  _error.js
.next/server/vendor-chunks/: @swc.js  framer-motion.js  lucide-react.js  motion-dom.js  motion-utils.js  next.js
.next/static/chunks/: _error.js  app-pages-internals.js  webpack.js
.next/static/webpack/: 86fa28677976d2b5.webpack.hot-update.json  app-pages-internals.86fa28677976d2b5.hot-update.js  webpack.08bbe3671c2a994f.hot-update.js  webpack.86fa28677976d2b5.hot-update.js  webpack.ea9454b861907648.hot-update.js
.next/types/app/: layout.ts  page.ts
program/: Anchor.toml  package-lock.json  package.json  tsconfig.json  tsconfig.lib.json  tsconfig.spec.json
program/programs/research-token/: Cargo.toml
program/programs/research-token/src/: lib.rs
program/tests/: research-token.spec.ts
src/app/: layout.tsx  page.tsx
src/components/layout/: Footer.tsx  Header.tsx
src/components/research/: ResearchCard.tsx  (+2 more)
src/pages/: Dashboard.tsx
src/providers/: ToastProvider.tsx  WalletProvider.tsx
src/services/: programService.ts  solanaService.ts  tarsAI.ts
src/types/: index.ts
src/utils/: researchScoreCalculator.ts
(+8 files in other folders)
